--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Mr Gul Brand</title>
+    <title>Mr. Gul Brand</title>
 </head>
 <body>
     <section class="Nav bar">
